# RAG-pipeline

./: .gitignore  README.md  config.py  ingest.py  pyproject.toml  query.py
